--- a/styles/content.css
+++ b/styles/content.css
@@ -133,15 +133,15 @@ h6, .h6 {
 /* @group Links */
 
 a {
-	
+
 }
 
 a:focus, a:hover {
-	
+
 }
 
 a:visited {
-	
+
 }
 
 /* @end */
@@ -280,6 +280,8 @@ ul.flat_list li, ol.flat_list li {
 }
 
 .listbuilder_controls a {
+	outline: none;
+	cursor: pointer;
 	text-decoration: none;
 	display: inline;
 	background-repeat: no-repeat;
@@ -353,21 +355,21 @@ div.list .refresh {
 	padding: 2px 5px;
 	cursor: default;
 	display: block;
-	
 
-/* 
-	if width will be 100% horizontal scrollbar will apear 
+
+/*
+	if width will be 100% horizontal scrollbar will apear
 	when scroll mode will be used
 	*/
-	
+
 
 /*width: 100%;*/
 	font: menu;
 	font-size: 12px;
-	
 
-/* 
-	it is very important, if line-height not setted or setted 
+
+/*
+	it is very important, if line-height not setted or setted
 	in relative units scroll will be broken in firefox
 	*/
 	line-height: 16px;
