--- a/styles/content.css
+++ b/styles/content.css
@@ -521,12 +521,13 @@ div.grid tr.category td {
 }
 
 .row_controls {
+	display: none;
 	clear: left;
-	width: 100%;
 	height: 25px;
 	line-height: 25px;
 	vertical-align: middle;
 	overflow: hidden;
+	padding-left: 20px;
 }
 
 .row_controls a {
