--- a/styles/content.css
+++ b/styles/content.css
@@ -84,6 +84,14 @@ hr {
 	font-size: 85%;
 }
 
+.throbber {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 50%;
+    top: 25%;'
+}
+
 /* @end */
 
 /* @group Default Spacing */
