--- a/styles/content.css
+++ b/styles/content.css
@@ -731,11 +731,12 @@ a.uploaded {
 }
 
 .throbber {
-	position: absolute;
-	width: 50px;
-	height: 50px;
-	left: 50%;
-	top: 25%;
+	display: none;
+	background: url(../templates/images/throbber.gif) no-repeat;
+	width: 25px;
+	height: 25px;
+	margin-left: 50%;
+	margin-top: 5%;
 }
 
 /* @end */
