*5285* Embed reading tools

--- a/styles/rt.css
+++ b/styles/rt.css
@@ -20,12 +20,11 @@
 }
 
 #container {
-	min-width: 180px;
+	min-width: 180px !important;
 }
 
 #main {
 	width: 95%;
-	font-size: 0.7em;
 }
 
 #main h2 {
